# ImageSequence

./: .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  README.md  sanity_check.py
Include/: CMakeLists.txt
Include/libImageSequence/: imageElement.hpp  image_element.hpp  scanDir.hpp
src/: CMakeLists.txt
src/libImageSequence/: CMakeLists.txt  imageElement.cpp  image_element.cpp  scanDir.cpp
src/python/: CMakeLists.txt  pyModule.cpp  version.h.in
tests/: CMakeLists.txt  imageElementTest.cpp
